--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/JamesH1015/Tracker.git"
+    "url": "git+https://github.com/adienicole/adinicole.github.io.git"
   },
   "keywords": [
     "express",
