--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
   "token": "melekalikimaka",
   "apps": "/page_apps",
   "mongo": {
-    "path": "mongodb://10.36.43.49.27017",
+    "path": "mongodb://10.36.43.49.27017/",
     "database": "tracker"
   }
 }
