--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "author": "James Houck",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/JamesH1015/Tracker/issues"
+    "url": "https://github.com/adienicole/adinicole.github.io.git/issues"
   },
   "homepage": "https://github.com/JamesH1015/Tracker#readme",
   "dependencies": {
