--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
   "token": "",
   "apps": "/page_apps",
   "mongo": {
-    "path": "mongodb://127.0.0.1:27017/",
+    "path": "mongodb://localhost:27017/",
     "database": "tracker"
   }
 }
