--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
   "name": "Tracker",
-  "port": 27017,
-  "token": "",
+  "port": 8080,
+  "token": "melakalikimaka",
   "apps": "/page_apps",
   "mongo": {
-    "path": "mongodb://localhost:27017/",
+    "path": "mongodb://127.0.0.1:27017/",
     "database": "tracker"
   }
 }
